2001-07-07  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSData.m: readContentsOfFile() hack added to permit reading
	of files like those in the /proc filesystem which don't support
	lengths.
	* Source/NSString.m: ([-initWithFormat:locale:]) use dummy local
	variable to try to get compilation to work on alpha ... untested
	as I don't have an alpha system.

2001-07-02  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSString.m: Never init nocopy with null pointer - increase
	chance of double initialisation being detected.

2001-06-27  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/callframe.m: callframe_do_call_opts(),
	callframe_build_return_opts() fixed memory leaks.
	Performance improvements -
	callframe_from_info() use a single malloc to allocate memory for
	the entire callframe. callframe_free() use a single free()
	* Source/NSConnection.m: Wait only 0.1 millisecond for first try
	checking for events ... CPUs are getting faster.
	* Source/NSTimer.m: Set minimum timer to 0.1 milliseconds ...

2001-06-26  Adam Fedor  <fedor@gnu.org>

	* Source/NSUserDefaults.m (+userLanguages): On MingW systems, check
	locale for language name.

2001-06-26  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSSerializer.m: While deserializing, check strings to see
	if they are really unicode, and create cStrings if they are not.
	Minor memory usage optimisation.

2001-06-21  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSConnection.m: Change some deprecated runloop methods for
	standard ones.
	* Source/NSRunLoop.m: ([runMode:beforeDate:]) Check for task
	completion and send out notifications if required.
        * Source/NSTask.m: ([waitUntilExit]) schedule a timer so that the
	run loop waits rather than polling as fast as the CPU allows.

2001-06-20  Richard Frith-Macdonald <rfm@gnu.org>

        * Source/NSTask.m: handleSignal() ... reset signal handler for
	systems that don't have BSD signal semantics.
	Report by jan trembulak